@@ -257,12 +257,14 @@
           if ( !fixed_sizes_index )
           {
             // set up 20pt at 72dpi as an arbitrary size
-            FT_Set_Char_Size( face, 20, 20, 72, 72 );
+            if ( FT_Set_Char_Size( face, 20 * 64, 20 * 64, 72, 72 ) );
+              continue;
             flags |= FT_LOAD_NO_BITMAP;
           }
           else
           {
-            FT_Select_Size( face, fixed_sizes_index - 1 );
+            if ( FT_Select_Size( face, fixed_sizes_index - 1 ) )
+              continue;
             flags |= FT_LOAD_COLOR;
           }
 
